--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "author": "Loic Bacoco",
   "main": "tools/cli.js",
   "bin": {
-    "bmad-invisible": "bin/bmad-invisible"
+    "bmad-invisible": "bin/bmad-invisible",
+    "bmad-invisible-codex": "dist/codex/codex-server.js"
   },
   "scripts": {
     "build": "node tools/cli.js build",
     "build:agents": "node tools/cli.js build --agents-only",
-    "build:mcp": "tsc -p mcp/tsconfig.json",
+    "build:mcp": "tsc -p mcp/tsconfig.json && tsc -p tsconfig.codex.json",
     "build:teams": "node tools/cli.js build --teams-only",
     "chat": "node bin/bmad-chat",
     "fix": "npm run format && npm run lint:fix",
@@ -39,7 +40,7 @@
     "lint": "eslint . --ext .js,.cjs,.mjs,.yaml --max-warnings=0",
     "lint:fix": "eslint . --ext .js,.cjs,.mjs,.yaml --fix",
     "list:agents": "node tools/cli.js list:agents",
-    "mcp": "node dist/mcp/server.js",
+    "mcp": "node dist/mcp/mcp/server.js",
     "pre-release": "npm run validate && npm run format:check && npm run lint",
     "prepare": "husky",
     "preview:release": "node tools/preview-release-notes.js",
@@ -66,7 +67,7 @@
   },
   "lint-staged": {
     "**/*.{js,cjs,mjs}": [
-      "eslint --fix --max-warnings=0",
+      "eslint --fix --max-warnings=0 --no-warn-ignored",
       "prettier --write"
     ],
     "**/*.yaml": [
