--- a/tsconfig.codex.json
+++ b/tsconfig.codex.json
@@ -1,13 +1,15 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "target": "ES2020",
     "module": "Node16",
     "moduleResolution": "node16",
     "declaration": true,
-    "outDir": "../dist/mcp",
+    "outDir": "./dist/codex",
+    "rootDir": "./src/mcp-server",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["server.ts", "../src/mcp-server/**/*.ts"]
+  "include": ["src/mcp-server/**/*.ts"]
 }
