--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "author": "Loic Bacoco",
   "main": "tools/cli.js",
   "bin": {
-    "bmad-invisible": "bin/bmad-invisible"
+    "bmad-invisible": "bin/bmad-invisible",
+    "bmad-invisible-codex": "bin/bmad-invisible-codex"
   },
   "scripts": {
     "build": "node tools/cli.js build",
     "build:agents": "node tools/cli.js build --agents-only",
-    "build:mcp": "tsc -p mcp/tsconfig.json",
+    "build:mcp": "tsc -p mcp/tsconfig.json && tsc -p src/mcp-server/tsconfig.json",
     "build:teams": "node tools/cli.js build --teams-only",
     "chat": "node bin/bmad-chat",
     "fix": "npm run format && npm run lint:fix",
@@ -66,7 +67,7 @@
   },
   "lint-staged": {
     "**/*.{js,cjs,mjs}": [
-      "eslint --fix --max-warnings=0",
+      "eslint --fix --max-warnings=0 --no-warn-ignored",
       "prettier --write"
     ],
     "**/*.yaml": [
