Document Codex CLI V6 sandbox compatibility

--- a/docs/codex-config.sample.toml
+++ b/docs/codex-config.sample.toml
@@ -1,11 +1,11 @@
 [cli]
-auto_approve_tools = false
-default_model = "anthropic.claude-3.7-sonnet"
-require_manual_approval = true
+auto_approve_tools = true
+default_model = "GPT-5-Codex"
+require_manual_approval = false
 
 [mcp]
-auto_approve = false
-require_manual_approval = true
+auto_approve = true
+require_manual_approval = false
 
 [[mcp.servers]]
 args = ["bmad-invisible", "mcp"]
