--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "bmad-invisible-codex": "bin/bmad-codex"
   },
   "scripts": {
-    "bmad:codex": "bmad-invisible-codex chat",
+    "bmad": "node bin/bmad-invisible start",
+    "bmad:claude": "node bin/bmad-claude",
+    "bmad:codex": "node bin/bmad-codex",
+    "bmad:opencode": "npx bmad-invisible opencode",
     "build": "node tools/cli.js build",
     "build:agents": "node tools/cli.js build --agents-only",
     "build:mcp": "tsc -p mcp/tsconfig.json && tsc -p tsconfig.codex.json",
     "build:teams": "node tools/cli.js build --teams-only",
-    "chat": "node bin/bmad-chat",
     "codex": "node bin/bmad-codex",
     "fix": "npm run format && npm run lint:fix",
     "flatten": "node tools/flattener/main.js",
