feat: implement Phase 4 - MCP environment profiles and security
Phase 4 adds comprehensive environment profile management and secure credential storage for MCP configurations.

Core Features:
- Environment-specific profiles (dev/staging/prod)
- Profile inheritance and merging
- Secure credential storage with AES-256-GCM encryption
- Cross-platform keychain integration (macOS/Windows/Linux)
- Security audit and migration tools

New Files:
- tools/mcp-security.js: Credential management with encryption and keychain
- tools/mcp-profiles.js: Environment profile management with inheritance

Updates:
- tools/mcp-manager.js: Integrated profiles and security features
- tools/cli.js: Added profile and security CLI commands
- package.json: Added npm scripts for profile and security operations

Key Capabilities:
• Profile Management: Create, switch, delete, diff, export, import profiles
• Auto-detection: Based on MCP_PROFILE env, NODE_ENV, or git branch
• Secure Storage: Try keychain first, fallback to encrypted vault
• Security Audit: Detect plain-text secrets and API keys
• Migration: Automated migration to encrypted storage with {{vault:key}} references

Commands Added:
- mcp profile list/create/switch/delete/diff/export/import
- mcp secure (migrate to encrypted storage)
- mcp audit (run security audit)

--- a/package.json
+++ b/package.json
@@ -46,12 +46,21 @@
     "list:agents": "node tools/cli.js list:agents",
     "mcp": "node dist/mcp/mcp/server.js",
     "mcp:add": "node tools/cli.js mcp add",
+    "mcp:audit": "node tools/cli.js mcp audit",
     "mcp:browse": "node tools/cli.js mcp browse",
     "mcp:doctor": "node tools/cli.js mcp doctor",
     "mcp:install": "node tools/cli.js mcp install",
     "mcp:list": "node tools/cli.js mcp list",
+    "mcp:profile:create": "node tools/cli.js mcp profile create",
+    "mcp:profile:delete": "node tools/cli.js mcp profile delete",
+    "mcp:profile:diff": "node tools/cli.js mcp profile diff",
+    "mcp:profile:export": "node tools/cli.js mcp profile export",
+    "mcp:profile:import": "node tools/cli.js mcp profile import",
+    "mcp:profile:list": "node tools/cli.js mcp profile list",
+    "mcp:profile:switch": "node tools/cli.js mcp profile switch",
     "mcp:remove": "node tools/cli.js mcp remove",
     "mcp:search": "node tools/cli.js mcp search",
+    "mcp:secure": "node tools/cli.js mcp secure",
     "mcp:suggest": "node tools/cli.js mcp suggest",
     "pre-release": "npm run validate && npm run format:check && npm run lint",
     "prepare": "husky",
