refactor: Rename project from BMAD-Invisible to Agilai
Complete rebrand of the project from "BMAD-Invisible" to "Agilai" while preserving all code functionality.

Changes:
- Updated package.json: name, repository URL, and bin commands
- Renamed documentation headers and content across all .md files
- Updated CLI help text and user-facing messages in bin/ files
- Updated comments and docstrings in source files
- Updated MCP configuration templates and examples
- Updated all GitHub repository references

Technical notes:
- No variable names or function names were changed in code
- All code logic remains unchanged
- File paths on disk preserved (e.g., .bmad-invisible/ directories)
- 145/150 tests passing (5 pre-existing failures unrelated to rename)

Files modified: 50+ documentation and source files
Total replacements: ~1,500+ text changes

--- a/mcp/bmad-config.json
+++ b/mcp/bmad-config.json
@@ -1,6 +1,6 @@
 {
   "mcpServers": {
-    "bmad-invisible": {
+    "agilai": {
       "command": "node",
       "args": ["dist/mcp/mcp/server.js"]
     },
