chore: improve npm discoverability with better keywords and badges
- Enhanced package description to highlight MCP integration
- Added relevant keywords: mcp, model-context-protocol, ai-agents, workflow, automation, claude, gemini, chatgpt
- Added npm version badge to README
- Added package size badge (2.6MB) to showcase optimization

--- a/package.json
+++ b/package.json
@@ -2,17 +2,26 @@
   "$schema": "https://json.schemastore.org/package.json",
   "name": "agilai",
   "version": "1.3.10",
-  "description": "Invisible orchestrator layer for BMAD-METHOD™",
+  "description": "Universal AI agent framework with MCP integration - Chat naturally, get professional results",
   "keywords": [
-    "agile",
     "ai",
+    "ai-agents",
     "orchestrator",
     "development",
     "methodology",
+    "agile",
+    "mcp",
+    "model-context-protocol",
     "agents",
+    "workflow",
+    "automation",
     "bmad",
     "invisible",
-    "zero-knowledge"
+    "zero-knowledge",
+    "natural-language",
+    "claude",
+    "gemini",
+    "chatgpt"
   ],
   "repository": {
     "type": "git",
