refactor: organize root directory structure
**Config consolidation:**
- Moved config files to config/ directory:
  - eslint.config.mjs
  - jest.config.cjs
  - prettier.config.mjs
  - tsconfig.codex.json
  - codex-config.toml.example
- Updated package.json scripts to reference new config locations
- Updated lint-staged config for new paths

**npm package optimization:**
- Added lib/ and mcp/ to .npmignore (only dist/ needed at runtime)
- Excluded config/ directory from npm package
- Package size: 2.6MB → 2.5MB
- File count: 492 → 434 files

**Impact:**
- ✅ Cleaner root directory (5 fewer config files)
- ✅ Smaller npm package (100KB reduction, 58 fewer files)
- ✅ Zero breaking changes - all builds and tests passing
- ✅ Better organization for developers

--- a/.npmignore
+++ b/.npmignore
@@ -7,6 +7,8 @@ test/
 
 # Source files (TypeScript - we publish compiled dist/)
 src/
+lib/
+mcp/
 
 # Development tooling
 .github/
@@ -14,6 +16,7 @@ src/
 .vscode/
 .bmad-invisible/
 .claude/
+config/
 
 # Build tools (not needed at runtime)
 tools/
@@ -23,13 +26,9 @@ docs/development/
 docs/archive/
 docs/v6-migration/
 
-# Configuration files (dev only)
+# Configuration files (dev only - moved to config/)
 .prettierrc
 .prettierignore
-prettier.config.mjs
-eslint.config.mjs
-jest.config.cjs
-tsconfig.*.json
 .eslintrc*
 
 # Shell scripts
