--- a/package.json
+++ b/package.json
@@ -35,15 +35,19 @@
     "agilai-codex": "bin/agilai-codex"
   },
   "scripts": {
-    "bmad": "node bin/agilai start",
-    "bmad:claude": "node bin/agilai-claude",
-    "bmad:codex": "node bin/agilai-codex",
-    "bmad:opencode": "npx agilai opencode",
+    "agilai": "node bin/agilai start",
+    "agilai:claude": "node bin/agilai-claude",
+    "agilai:codex": "node bin/agilai-codex",
+    "agilai:opencode": "npx agilai opencode",
+    "bmad": "npm run agilai --",
+    "bmad:claude": "npm run agilai:claude --",
+    "bmad:codex": "npm run agilai:codex --",
+    "bmad:opencode": "npm run agilai:opencode --",
     "build": "node .dev/tools/cli.js build",
     "build:agents": "node .dev/tools/cli.js build --agents-only",
     "build:mcp": "tsc -p .dev/mcp/tsconfig.json && tsc -p .dev/config/tsconfig.codex.json && cp -r .dev/lib dist/mcp/ && cp -r hooks dist/mcp/",
     "build:teams": "node .dev/tools/cli.js build --teams-only",
-    "codex": "node bin/bmad-codex",
+    "codex": "node bin/agilai-codex",
     "fix": "npm run format && npm run lint:fix",
     "flatten": "node .dev/tools/flattener/main.js",
     "format": "prettier --config .dev/config/prettier.config.mjs --write \"**/*.{js,cjs,mjs,json,md,yaml}\"",
