Rename installer CLI from bmad to agilai

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "format": "prettier --config .dev/config/prettier.config.mjs --write \"**/*.{js,cjs,mjs,json,md,yaml}\"",
     "format:check": "prettier --config .dev/config/prettier.config.mjs --check \"**/*.{js,cjs,mjs,json,md,yaml}\"",
     "postinstall": "node .dev/tools/postinstall-build-mcp.js",
-    "install:bmad": "node .dev/tools/installer/bin/bmad.js install",
+    "install:agilai": "node .dev/tools/installer/bin/agilai.js install",
+    "install:bmad": "npm run install:agilai --",
     "lint": "eslint --config .dev/config/eslint.config.mjs . --ext .js,.cjs,.mjs,.yaml --max-warnings=0",
     "lint:fix": "eslint --config .dev/config/eslint.config.mjs . --ext .js,.cjs,.mjs,.yaml --fix",
     "list:agents": "node .dev/tools/cli.js list:agents",
