chore: rebrand npm chat scripts

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "agents",
     "workflow",
     "automation",
-    "bmad",
+    "agilai-cli",
     "invisible",
     "zero-knowledge",
     "natural-language",
@@ -36,13 +36,13 @@
   },
   "scripts": {
     "agilai": "node bin/agilai start",
+    "agilai:chat": "npm run agilai --",
+    "agilai:chat:claude": "npm run agilai:claude --",
+    "agilai:chat:codex": "npm run agilai:codex --",
+    "agilai:chat:opencode": "npm run agilai:opencode --",
     "agilai:claude": "node bin/agilai-claude",
     "agilai:codex": "node bin/agilai-codex",
     "agilai:opencode": "npx agilai opencode",
-    "bmad": "npm run agilai --",
-    "bmad:claude": "npm run agilai:claude --",
-    "bmad:codex": "npm run agilai:codex --",
-    "bmad:opencode": "npm run agilai:opencode --",
     "build": "node .dev/tools/cli.js build",
     "build:agents": "node .dev/tools/cli.js build --agents-only",
     "build:mcp": "tsc -p .dev/mcp/tsconfig.json && tsc -p .dev/config/tsconfig.codex.json && cp -r .dev/lib dist/mcp/ && cp -r hooks dist/mcp/",
@@ -53,7 +53,7 @@
     "format": "prettier --config .dev/config/prettier.config.mjs --write \"**/*.{js,cjs,mjs,json,md,yaml}\"",
     "format:check": "prettier --config .dev/config/prettier.config.mjs --check \"**/*.{js,cjs,mjs,json,md,yaml}\"",
     "postinstall": "node .dev/tools/postinstall-build-mcp.js",
-    "install:bmad": "node .dev/tools/installer/bin/bmad.js install",
+    "install:agilai": "node .dev/tools/installer/bin/bmad.js install",
     "lint": "eslint --config .dev/config/eslint.config.mjs . --ext .js,.cjs,.mjs,.yaml --max-warnings=0",
     "lint:fix": "eslint --config .dev/config/eslint.config.mjs . --ext .js,.cjs,.mjs,.yaml --fix",
     "list:agents": "node .dev/tools/cli.js list:agents",
