fix: use node require for mcp orchestrator

--- a/mcp/agilai-config.json
+++ b/mcp/agilai-config.json
@@ -2,7 +2,7 @@
   "mcpServers": {
     "agilai-invisible-orchestrator": {
       "command": "node",
-      "args": ["dist/mcp/mcp/server.js"]
+      "args": ["-e", "require('agilai/dist/mcp/mcp/server.js')"]
     },
     "chrome-devtools": {
       "command": "npx",
