--- a/tsconfig.aidesigner-ng.json
+++ b/tsconfig.aidesigner-ng.json
@@ -22,7 +22,8 @@
       "@aidesigner/mappers": ["./packages/mappers"],
       "@aidesigner/codegen": ["./packages/codegen/src"],
       "@aidesigner/codemods": ["./packages/codemods/src"],
-      "@aidesigner/canonical-spec": ["./packages/canonical-spec"]
+      "@aidesigner/canonical-spec": ["./packages/canonical-spec"],
+      "@aidesigner/meta-agents": ["./packages/meta-agents/src"]
     }
   },
   "include": [
