--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "aidesigner": "node bin/aidesigner start",
+    "aidesigner:build": "aidesigner build",
     "aidesigner:claude": "node bin/aidesigner-claude",
     "aidesigner:codex": "node bin/aidesigner-codex",
     "aidesigner:opencode": "npx aidesigner opencode",
@@ -45,7 +46,7 @@
     "bmad:opencode": "npm run aidesigner:opencode --",
     "build": "node .dev/tools/cli.js build",
     "build:agents": "node .dev/tools/cli.js build --agents-only",
-    "build:mcp": "tsc -p .dev/mcp/tsconfig.json && tsc -p .dev/config/tsconfig.codex.json && cp -r .dev/lib dist/mcp/ && node -e \"const fs=require('node:fs'); const path=require('node:path'); const dest=path.join('dist','mcp','tools'); fs.mkdirSync(dest,{recursive:true}); for (const file of ['mcp-registry.js','mcp-manager.js','mcp-profiles.js','mcp-security.js']) { fs.copyFileSync(path.join('.dev','tools',file), path.join(dest,file)); }\"",
+    "build:mcp": "tsc -p .dev/mcp/tsconfig.json && tsc -p .dev/config/tsconfig.codex.json && cp -r .dev/lib dist/mcp/ && cp -r hooks dist/mcp/ && node -e \"const fs=require('node:fs'); const path=require('node:path'); const dest=path.join('dist','mcp','tools'); fs.mkdirSync(dest,{recursive:true}); for (const file of ['mcp-registry.js','mcp-manager.js','mcp-profiles.js','mcp-security.js']) { fs.copyFileSync(path.join('.dev','tools',file), path.join(dest,file)); }\"",
     "build:teams": "node .dev/tools/cli.js build --teams-only",
     "codex": "node bin/aidesigner-codex",
     "fix": "npm run format && npm run lint:fix",
@@ -112,6 +113,7 @@
   "dependencies": {
     "@kayvan/markdown-tree-parser": "^1.6.1",
     "@modelcontextprotocol/sdk": "^1.18.2",
+    "aidesigner": "^3.2.0",
     "chalk": "^4.1.2",
     "commander": "^14.0.0",
     "comment-json": "^4.2.5",
