--- a/lolo/components.json
+++ b/lolo/components.json
@@ -13,8 +13,9 @@
     "utils": "@/lib/utils"
   },
   "registries": {
-    "@originui": "https://originui.com/r/components.json",
-    "@aceternity": "https://aceternity.com/r/components.json",
-    "@magicui": "https://magicui.design/r/components.json"
+    "@originui": "https://originui.com/r/{name}.json",
+    "@aceternity": "https://aceternity.com/r/{name}.json",
+    "@magicui": "https://magicui.design/r/{name}.json",
+    "@kiboui": "https://www.kibo-ui.com/r/{name}.json"
   }
 }
