--- a/front-end/components.json
+++ b/front-end/components.json
@@ -19,9 +19,9 @@
   },
   "iconLibrary": "lucide",
   "registries": {
-    "@originui": "https://originui.com/r/{name}.json",
-    "@aceternity": "https://aceternity.com/r/{name}.json",
-    "@magicui": "https://magicui.design/r/{name}.json",
-    "@kiboui": "https://www.kibo-ui.com/r/{name}.json"
+    "@originui": "https://originui.com/r/components.json",
+    "@aceternity": "https://aceternity.com/r/components.json",
+    "@magicui": "https://magicui.design/r/components.json",
+    "@kiboui": "https://www.kibo-ui.com/r/components.json"
   }
 }
