--- a/front-end/package.json
+++ b/front-end/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.364.0",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^24.7.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
