feat: migrate project state management to typescript

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "build:agents": "node .dev/tools/cli.js build --agents-only",
     "build:mcp": "tsc -p .dev/mcp/tsconfig.json && tsc -p .dev/config/tsconfig.codex.json && cp -r .dev/lib dist/mcp/ && cp -r common dist/mcp/ && cp -r hooks dist/mcp/ && node -e \"const fs=require('node:fs'); const path=require('node:path'); const dest=path.join('dist','mcp','tools'); fs.mkdirSync(dest,{recursive:true}); for (const file of ['mcp-registry.js','mcp-manager.js','mcp-profiles.js','mcp-security.js']) { fs.copyFileSync(path.join('.dev','tools',file), path.join(dest,file)); }\" && sed -i \"s|require('../../common/utils/logger')|require('../common/utils/logger')|g\" dist/mcp/lib/*.js && sed -i \"s|require('../../../common/utils/logger')|require('../../common/utils/logger')|g\" dist/mcp/lib/*/*.js",
     "build:teams": "node .dev/tools/cli.js build --teams-only",
+    "build:types": "tsc -p tsconfig.build.json",
     "codex": "node bin/aidesigner-codex",
     "fix": "npm run format && npm run lint:fix",
     "flatten": "node .dev/tools/flattener/main.js",
@@ -88,6 +89,7 @@
     "setup:hooks": "chmod +x .dev/tools/setup-hooks.sh && ./.dev/tools/setup-hooks.sh",
     "sync:external": "node bin/sync-external-agents",
     "test": "jest --config .dev/config/jest.config.cjs --runInBand",
+    "typecheck": "tsc --noEmit",
     "validate": "node .dev/tools/cli.js validate",
     "version:all": "node .dev/tools/bump-all-versions.js",
     "version:all:major": "node .dev/tools/bump-all-versions.js major",
