--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "socket.io": "^4.6.1",
     "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
