Add seed Claude Skills for AiDesigner workflows

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,10 @@ Thumbs.db
 # AI assistant files
 CLAUDE.md
 .ai/*
-.claude
+# Local Claude configuration remains ignored except for committed seed Skills
+.claude/*
+!.claude/skills/
+!.claude/skills/**
 .gemini
 .iflow
 
